@@ -66,6 +66,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #9168: now smtpd is able to bind privileged port.
+
 - Issue #12529: fix cgi.parse_header issue on strings with double-quotes and
   semicolons together. Patch by Ben Darnell and Petri Lehtinen.
 
